2003-06-02  Roger Sayle  <roger@eyesopen.com>
	    Zack Weinberg  <zack@codesourcery.com>

	* emit-rtl.c (gen_complex_constant_part):  Remove unnecessary
	test of TREE_CONSTANT_POOL_ADDRESS_P.

2003-06-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* mips.c: Don't include output.h twice.
	* stormy16.c: Likewise.
	* xtensa.c: Likewise.
	* output.h: Protect against multiple inclusion.

2003-06-02  J"orn Rennecke <joern.rennecke@superh.com>

	* sh.h (OLD_ARG_MODE): New macro.
	(FUNCTION_ARG_ADVANCE, FUNCTION_ARG_PASS_BY_REFERENCE): Use it.
	(FUNCTION_ARG_1): Break out of:
	(FUNCTION_ARG).  Use OLD_ARG_MODE.

2003-04-16  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>

        * gcc/config.gcc Add support multilib parts for m32rx processor.

2003-06-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* Makefile.in (c-options.c): Pass in $(AWK) to opts.sh.
	(mostlyclean): Delete c-options.c and c-options.h.

2003-06-02  Neil Booth  <neil@daikokuya.co.uk>

	* c-opts.c (CL_REJECT_NEGATIVE): New.
	(c_common_decode_option): Update to use it.
	* c.opt: Update documentation; use RejectNegative.
	* opts.sh: Handle RejectNegative.

2003-06-01  Zack Weinberg  <zack@codesourcery.com>

	* ggc-page.c (init_ggc): Give better diagnostics on failure to
	open /dev/zero.
	* toplev.c (crash_signal): Reset handling for received signal
	to SIG_DFL.

2003-06-02  Ben Elliston  <bje@wasabisystems.com>

	* config/arm/arm.c (arm_use_dfa_pipeline_interface): Declare.
	(TARGET_SCHED_USE_DFA_PIPELINE_INTERFACE): Define if not already.
	(arm_use_dfa_pipeline_interface): Implement.
	* config/arm/arm.md (arm): New automaton.
	(write_buf): Remove function units; new cpu unit.
	(write_blockage): Remove function units; new cpu unit.
	(core): Remove function units; new cpu unit.
	(r_mem_f_wbuf): New instruction reservation.
	(store1_wbuf, store2_wbuf, store3_wbuf, store4_wbuf): Likewise.
	(store1_ldsched, store2, store3, store4): Likewise.
	(load_ldsched, load_ldsched_xscale, load_or_store): Likewise.